--- a/workshop_docker/pyproject.toml
+++ b/workshop_docker/pyproject.toml
@@ -6,7 +6,8 @@ authors = ["VINICIUS FIALHO <vinicius.fialho96@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.12.1"
+streamlit = "^1.34.0"
 
 
 [build-system]
